--- a/package.json
+++ b/package.json
@@ -11,13 +11,25 @@
   "dependencies": {
     "expo": "~44.0.2",
     "expo-splash-screen": "~0.14.1",
-    "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "@react-navigation/bottom-tabs": "^5.2.6",
+    "@react-navigation/compat": "^5.1.25",
+    "@react-navigation/drawer": "^5.4.1",
+    "@react-navigation/native": "^5.1.5",
+    "@react-navigation/stack": "^5.2.10",
+    "@rematch/core": "^1.3.0",
+    "react-native-gesture-handler": "^1.5.0",
+    "react-native-reanimated": "^1.8.0",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.5.0",
     "@babel/core": "^7.12.9"
   },
   "private": true
